--- a/GHC-Pricer.cabal
+++ b/GHC-Pricer.cabal
@@ -4,11 +4,11 @@ cabal-version: 2.2
 --
 -- see: https://github.com/sol/hpack
 
-name:           GHC-Pricer
+name:           ghc-pricer
 version:        0.1.0.0
-description:    Please see the README on GitHub at <https://github.com/githubuser/GHC-Pricer#readme>
-homepage:       https://github.com/githubuser/GHC-Pricer#readme
-bug-reports:    https://github.com/githubuser/GHC-Pricer/issues
+description:    Please see the README on GitHub at <https://github.com/githubuser/ghc-pricer#readme>
+homepage:       https://github.com/githubuser/ghc-pricer#readme
+bug-reports:    https://github.com/githubuser/ghc-pricer/issues
 author:         Author name here
 maintainer:     example@example.com
 copyright:      2024 Author name here
@@ -21,53 +21,53 @@ extra-source-files:
 
 source-repository head
   type: git
-  location: https://github.com/githubuser/GHC-Pricer
+  location: https://github.com/githubuser/ghc-pricer
 
 library
   exposed-modules:
       Lib
   other-modules:
-      Paths_GHC_Pricer
+      Paths_ghc_pricer
   autogen-modules:
-      Paths_GHC_Pricer
+      Paths_ghc_pricer
   hs-source-dirs:
       src
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       base >=4.7 && <5
+    , integration
     , statistics
-    , time
   default-language: Haskell2010
 
-executable GHC-Pricer-exe
+executable ghc-pricer-exe
   main-is: Main.hs
   other-modules:
-      Paths_GHC_Pricer
+      Paths_ghc_pricer
   autogen-modules:
-      Paths_GHC_Pricer
+      Paths_ghc_pricer
   hs-source-dirs:
       app
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      GHC-Pricer
-    , base >=4.7 && <5
+      base >=4.7 && <5
+    , ghc-pricer
+    , integration
     , statistics
-    , time
   default-language: Haskell2010
 
-test-suite GHC-Pricer-test
+test-suite ghc-pricer-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
-      Paths_GHC_Pricer
+      Paths_ghc_pricer
   autogen-modules:
-      Paths_GHC_Pricer
+      Paths_ghc_pricer
   hs-source-dirs:
       test
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      GHC-Pricer
-    , base >=4.7 && <5
+      base >=4.7 && <5
+    , ghc-pricer
+    , integration
     , statistics
-    , time
   default-language: Haskell2010
