--- a/package.yaml
+++ b/package.yaml
@@ -1,6 +1,6 @@
-name:                GHC-Pricer
+name:                ghc-pricer
 version:             0.1.0.0
-github:              "githubuser/GHC-Pricer"
+github:              "githubuser/ghc-pricer"
 license:             BSD-3-Clause
 author:              "Author name here"
 maintainer:          "example@example.com"
@@ -17,12 +17,12 @@ extra-source-files:
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description:         Please see the README on GitHub at <https://github.com/githubuser/GHC-Pricer#readme>
+description:         Please see the README on GitHub at <https://github.com/githubuser/ghc-pricer#readme>
 
 dependencies:
 - base >= 4.7 && < 5
-- statistics
-- time
+- integration
+- statistics 
 
 ghc-options:
 - -Wall
@@ -39,7 +39,7 @@ library:
   source-dirs: src
 
 executables:
-  GHC-Pricer-exe:
+  ghc-pricer-exe:
     main:                Main.hs
     source-dirs:         app
     ghc-options:
@@ -47,10 +47,10 @@ executables:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
-    - GHC-Pricer
+    - ghc-pricer
 
 tests:
-  GHC-Pricer-test:
+  ghc-pricer-test:
     main:                Spec.hs
     source-dirs:         test
     ghc-options:
@@ -58,4 +58,4 @@ tests:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
-    - GHC-Pricer
+    - ghc-pricer
