--- a/GHC-Pricer.cabal
+++ b/GHC-Pricer.cabal
@@ -1,14 +1,14 @@
 cabal-version: 2.2
 
--- This file has been generated from package.yaml by hpack version 0.36.0.
+-- This file has been generated from package.yaml by hpack version 0.37.0.
 --
 -- see: https://github.com/sol/hpack
 
-name:           ghc-pricer
+name:           GHC-Pricer
 version:        0.1.0.0
-description:    Please see the README on GitHub at <https://github.com/githubuser/ghc-pricer#readme>
-homepage:       https://github.com/githubuser/ghc-pricer#readme
-bug-reports:    https://github.com/githubuser/ghc-pricer/issues
+description:    Please see the README on GitHub at <https://github.com/githubuser/GHC-Pricer#readme>
+homepage:       https://github.com/githubuser/GHC-Pricer#readme
+bug-reports:    https://github.com/githubuser/GHC-Pricer/issues
 author:         Author name here
 maintainer:     example@example.com
 copyright:      2024 Author name here
@@ -21,53 +21,47 @@ extra-source-files:
 
 source-repository head
   type: git
-  location: https://github.com/githubuser/ghc-pricer
+  location: https://github.com/githubuser/GHC-Pricer
 
 library
   exposed-modules:
       Lib
   other-modules:
-      Paths_ghc_pricer
+      Paths_GHC_Pricer
   autogen-modules:
-      Paths_ghc_pricer
+      Paths_GHC_Pricer
   hs-source-dirs:
       src
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       base >=4.7 && <5
-    , integration
-    , statistics
   default-language: Haskell2010
 
-executable ghc-pricer-exe
+executable GHC-Pricer-exe
   main-is: Main.hs
   other-modules:
-      Paths_ghc_pricer
+      Paths_GHC_Pricer
   autogen-modules:
-      Paths_ghc_pricer
+      Paths_GHC_Pricer
   hs-source-dirs:
       app
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
-    , ghc-pricer
-    , integration
-    , statistics
+      GHC-Pricer
+    , base >=4.7 && <5
   default-language: Haskell2010
 
-test-suite ghc-pricer-test
+test-suite GHC-Pricer-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
-      Paths_ghc_pricer
+      Paths_GHC_Pricer
   autogen-modules:
-      Paths_ghc_pricer
+      Paths_GHC_Pricer
   hs-source-dirs:
       test
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
-    , ghc-pricer
-    , integration
-    , statistics
+      GHC-Pricer
+    , base >=4.7 && <5
   default-language: Haskell2010
