--- a/GHC-Pricer.cabal
+++ b/GHC-Pricer.cabal
@@ -35,6 +35,8 @@ library
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       base >=4.7 && <5
+    , integration
+    , statistics
   default-language: Haskell2010
 
 executable GHC-Pricer-exe
@@ -49,6 +51,8 @@ executable GHC-Pricer-exe
   build-depends:
       GHC-Pricer
     , base >=4.7 && <5
+    , integration
+    , statistics
   default-language: Haskell2010
 
 test-suite GHC-Pricer-test
@@ -64,4 +68,6 @@ test-suite GHC-Pricer-test
   build-depends:
       GHC-Pricer
     , base >=4.7 && <5
+    , integration
+    , statistics
   default-language: Haskell2010
