--- a/GHC-Pricer.cabal
+++ b/GHC-Pricer.cabal
@@ -37,6 +37,7 @@ library
       base >=4.7 && <5
     , integration
     , statistics
+    , time
   default-language: Haskell2010
 
 executable GHC-Pricer-exe
@@ -53,6 +54,7 @@ executable GHC-Pricer-exe
     , base >=4.7 && <5
     , integration
     , statistics
+    , time
   default-language: Haskell2010
 
 test-suite GHC-Pricer-test
@@ -70,4 +72,5 @@ test-suite GHC-Pricer-test
     , base >=4.7 && <5
     , integration
     , statistics
+    , time
   default-language: Haskell2010
